--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Wala</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/b4bd8d5fd5.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+    <!-- header started -->
+    <header>
+        <div class="header-div">
+            <div class="text-side">
+                <h1 id="heading">The Greatest <br>
+                    show on the <br>
+                    earth</h1>
+                <p id="head-text">
+                    The best show of the world is football all over the world billions of people love to see and play
+                    football. In football world cup 130 countries take participation.
+                </p>
+                <button class="button">WATCH LIVE <span class="fa fa-arrow-right"></span></button>
+            </div>
+            <div>
+                <img id="head-img" src="assets/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- header ended -->
 
 </body>
 
