--- a/index.html
+++ b/index.html
@@ -35,6 +35,89 @@
     </header>
     <!-- header ended -->
 
+    <!-- main section started -->
+    <section class="main-sec">
+        <div class="menu">
+            <a class="menu-item" href="">Upcoming Match</a>
+            <a class="menu-item" href="">All Group</a>
+            <a class="menu-item" href="">Blog</a>
+        </div>
+        <div class="blog-items">
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+            <div class="blog-img">
+                <img src="assets/Blog Image.png" alt=""> <br>
+                <button class="blog-img-btn">Transfer</button> <br>
+                <h4 class="blog-img-text"> Transfer Live: Chlesea in talks
+                    over Kimpenbe transfer</h4>
+                <div class="image-icons">
+                    <img class="icons" src="assets/Time Icon.png" alt="">
+                    <p>10hr</p>
+                    <img class="icons" src="assets/Chat Icon.png" alt="">
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- main section ended -->
 </body>
 
 </html>
