complete for com

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- main section started -->
     <section class="main-sec">
         <div class="menu">
-            <a class="menu-item" href="">Upcoming Match</a>
+            <a class="menu-item highlight" href="second-index.html" target="_blank">Upcoming Match</a>
             <a class="menu-item" href="">All Group</a>
             <a class="menu-item" href="">Blog</a>
         </div>
@@ -118,6 +118,29 @@
         </div>
     </section>
     <!-- main section ended -->
+
+    <!-----footer section started---->
+    <footer class="footer">
+        <h2 class="footer-heading">Goal</h2>
+
+        <div class="footer-icon-div">
+            <a class="footer-icon" href=" https://www.facebook.com/arafatulislam.zami/" target="_blank"> <i
+                    class="fa fa-facebook"></i></a>
+            <a class="footer-icon" href=""> <i class="fa fa-twitter"></i></a>
+            <a class="footer-icon" href="https://www.linkedin.com/in/arafatul-islam-zami-144a98246/" target="_blank"> <i
+                    class="fa fa-linkedin"></i></a>
+            <hr>
+        </div>
+        <div class="footer-text">
+            <h5>Contact Us</h5>
+            <h5>Terms of Service </h5>
+            <h5>Privacy Policy </h5>
+            <h5>Privacy Settings </h5>
+            <h5>Goal App</h5>
+            <h5> Goal Liv</h5>
+        </div>
+    </footer>
+    <!-- footer ended -->
 </body>
 
 </html>
