responsive for tab

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             </div>
         </div>
     </section>
+    <button id="blog-btn" class="button">View all</button>
     <!-- main section ended -->
 
     <!-----footer section started---->
