--- a/second-index.html
+++ b/second-index.html
@@ -122,6 +122,7 @@
 
 
     </section>
+    <button id="blog-btn" class="button">View all</button>
     <!-- main section ended -->
 
     <!-- footer started -->
