--- a/second-index.html
+++ b/second-index.html
@@ -24,8 +24,9 @@
                     show on the <br>
                     earth</h1>
                 <p id="head-text">
-                    The best show of the world is football all over the world billions of people love to see and play
-                    football. In football world cup 130 countries take participation.
+                    The best show of the world is football all over the world billions of people love to see<span
+                        id="hidden"> and play
+                        football. In football world cup 130 countries take participation. </span>
                 </p>
                 <button class="button">WATCH LIVE <span class="fa fa-arrow-right"></span></button>
             </div>
